--- a/lyvo-mvp/server/package.json
+++ b/lyvo-mvp/server/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "stripe": "^14.25.0"
+    "stripe": "^14.25.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
